--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,6 +1,6 @@
 @import "normalize.css";
-@import "base/_variables";
-@import "base/_mixins";
-@import "base/_global";
-@import "modules/_btn";
-@import "modules/_sprite";
+@import "base/variables";
+@import "base/mixins";
+@import "base/global";
+@import "modules/btn";
+@import "modules/sprite";
